--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:dev:db": "src/scripts/start-db.sh",
+    "migration:g": "npm run build && typeorm migration:generate -n",
+    "migration": "npm run build && typeorm migration:run",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -34,7 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.2.45"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
