--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/luxon": "^2.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "luxon": "^2.4.0",
     "pg": "^8.7.3",
     "postgres": "^3.1.0",
     "reflect-metadata": "^0.1.13",
