--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,39 @@
-version: "3"
+version: '3'
 services:
-
-  postgres:
-    container_name: 'watsap_postgres'
+  db:
     image: postgres
-    ports:
-#      - "127.0.0.1:5432:5432"
-      - "0.0.0.0:5432:5432" # open host for superset purposes
+    restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DATABASE}
+      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+    container_name: postgres-db
+    ports:
+      #      - "127.0.0.1:5432:5432"
+      - "5432:5432" # open host for superset purposes
     volumes:
-      - ./db-data:/var/lib/postgresql/data
+      - ./pgdata:/var/lib/postgresql/data
+
+  nestjs:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    image: tusharchy/nest-and-postgres-application:latest
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
+      POSTGRES_HOST: db
+      ROOT_TOCEN: ${ROOT_TOCEN}
+      ROOT_INSTANS: ${ROOT_INSTANS}
+    ports:
+      - "3000:3000" # expose-to-the-world : only-in-the-docker
+    container_name: nest-todo-app-be
+    restart: always
+    depends_on:
+      - db
 volumes:
   db-data:
     driver: local
+
