--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "migration:g": "npm run build && typeorm migration:generate -n",
     "migration": "npm run build && typeorm migration:run",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "typeorm migration:run && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
