time zone cammand

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,22 @@ services:
       POSTGRES_HOST: ${POSTGRES_HOST}
       TZ: ${TZ}
     container_name: postgres-db
+    command: >
+      bash -c "apk add --no-cache tzdata"
     ports:
       #      - "127.0.0.1:5432:5432"
       - "5432:5432" # open host for superset purposes
     volumes:
       - ./pgdata:/var/lib/postgresql/data
 
+
   nestjs:
     build:
       context: .
       dockerfile: ./Dockerfile
-    image: tusharchy/nest-and-postgres-application:latest
+    image: bot-whats-ap
+    command: >
+      bash -c "apk add --no-cache tzdata"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
