--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,15 @@ services:
       POSTGRES_HOST: ${POSTGRES_HOST}
       TZ: ${TZ}
     container_name: postgres-db
-    command: >
-      bash -c "apk add --no-cache tzdata"
+    command: apk add --no-cache tzdata
     ports:
       #      - "127.0.0.1:5432:5432"
       - "5432:5432" # open host for superset purposes
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+
 
 
   nestjs:
@@ -40,6 +42,9 @@ services:
     restart: always
     depends_on:
       - db
+    volumes:
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
 volumes:
   db-data:
     driver: local
